Update CoinMarketCapServiceTest.java